--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,12 @@
-.titletext{
+.titletext {
     font-size: 30px;
     font-weight: 700;
     line-height: 35px;
     letter-spacing: 0em;
     text-align: left;
 }
-.cardDescription{
+
+.textDescription {
     font-size: 24px;
     font-weight: 700;
     line-height: 28px;
@@ -13,18 +14,53 @@
     text-align: left;
 
 }
-.caption {
+
+.textButton {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: left;
+
+}
+
+.textCaption {
     font-size: 14px;
     font-weight: 700;
-    line-height: 16px;
+    line-height: 14px;
     letter-spacing: 0em;
     text-align: left;
     color: #BBBDD0;
 }
+
+.textSmall {
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 12px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: white;
+}
+
 .card {
     width: 100%;
-    padding:16px;
+    padding: 16px;
     border-radius: 5px;
     border: 1px solid #DDE2FF;
     background-color: white;
+}
+
+.chip {
+    width: auto;
+    height: auto;
+    background: #7A8DFD;
+    border-radius: 5px;
+    padding: 5px 12px;
+    text-align: center;
+}
+
+.textDone {
+    color: #0BC375;
+    text-decoration-line: line-through;
 }
