--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,21 @@
-.titletext{
+@font-face {
+    font-family: 'Roboto';
+    src: url('@/assets/fonts/Roboto-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.titletext {
+    font-family: Roboto;
     font-size: 30px;
     font-weight: 700;
     line-height: 35px;
     letter-spacing: 0em;
     text-align: left;
 }
-.cardDescription{
+
+.cardDescription {
+    font-family: Roboto;
     font-size: 24px;
     font-weight: 700;
     line-height: 28px;
@@ -13,7 +23,9 @@
     text-align: left;
 
 }
+
 .caption {
+    font-family: Roboto;
     font-size: 14px;
     font-weight: 700;
     line-height: 16px;
@@ -21,10 +33,51 @@
     text-align: left;
     color: #BBBDD0;
 }
+
+.infoText {
+    font-family: Roboto;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: center;
+}
+
 .card {
     width: 100%;
-    padding:16px;
+    padding: 16px;
     border-radius: 5px;
     border: 1px solid #DDE2FF;
     background-color: white;
+}
+
+.spaceBetween {
+    display: flex;
+    justify-content: space-between;
+}
+
+textarea {
+    width: 100%;
+    border: 3px solid #D1D8FF;
+    border-radius: 5px;
+}
+
+.marginTop32 {
+    margin-top: 32px;
+}
+
+.marginTop28 {
+    margin-top: 28px;
+}
+
+.marginBottom34 {
+    margin-bottom: 34px;
+}
+
+.marginTop13 {
+    margin-top: 13px;
+}
+
+.marginLeft19 {
+    margin-left: 19px;
 }
