--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,8 @@
     font-style: normal;
 }
 
-.titletext {
+
+.title-text {
     font-family: Roboto;
     font-size: 30px;
     font-weight: 700;
@@ -14,7 +15,7 @@
     text-align: left;
 }
 
-.cardDescription {
+.text-description {
     font-family: Roboto;
     font-size: 24px;
     font-weight: 700;
@@ -24,17 +25,36 @@
 
 }
 
-.caption {
+.text-button {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: left;
+
+}
+
+.text-caption {
     font-family: Roboto;
     font-size: 14px;
     font-weight: 700;
-    line-height: 16px;
+    line-height: 14px;
     letter-spacing: 0em;
     text-align: left;
     color: #BBBDD0;
 }
 
-.infoText {
+.text-small {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 12px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: white;
+}
+.info-text {
     font-family: Roboto;
     font-size: 24px;
     font-weight: 700;
@@ -51,8 +71,19 @@
     background-color: white;
 }
 
-.spaceBetween {
+.chip {
+    width: auto;
+    height: auto;
+    background: #7A8DFD;
+    border-radius: 5px;
+    padding: 5px 12px;
+    text-align: center;
+}
+.flex-box {
     display: flex;
+  }
+
+.space-between {
     justify-content: space-between;
 }
 
@@ -62,22 +93,33 @@ textarea {
     border-radius: 5px;
 }
 
-.marginTop32 {
+.text-done {
+    color: #0BC375;
+    text-decoration-line: line-through;
+}
+.margin-top-9 {
+    margin-top: 9px;
+}
+.margin-top-32 {
     margin-top: 32px;
 }
 
-.marginTop28 {
+.margin-top-28 {
     margin-top: 28px;
 }
 
-.marginBottom34 {
+.margin-bottom-28 {
+    margin-bottom: 24px;
+}
+
+.margin-bottom-34 {
     margin-bottom: 34px;
 }
 
-.marginTop13 {
+.margin-top-13 {
     margin-top: 13px;
 }
 
-.marginLeft19 {
+.margin-left-19 {
     margin-left: 19px;
 }
