--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,4 +1,4 @@
-$base-color: #F8F9FF;
+$base-color: #f8f9ff;
 $card-color: #ffffff;
-$primaryText: #7A8DFD;
-$borderPrimary: #DDE2FF;
+$primaryText: #7a8dfd;
+$borderPrimary: #dde2ff;
