--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,5 +1,5 @@
 $base-color: #f8f9ff;
 $card-color: #ffffff;
-$primaryText: #7a8dfd;
-$borderPrimary: #dde2ff;
+$primary-text: #7a8dfd;
+$border-primary: #dde2ff;
 $button-background: #32394B;
