--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -150,3 +150,41 @@ textarea {
 .relative-position {
   position: relative;
 }
+ .success {
+  position:absolute;
+  height: 55px;
+  background-color: #0BC475;
+  top:90px;
+  left:0px;
+  right:0px;
+  border-radius: 5px;
+}
+.error {
+  position:absolute;
+  height: 55px;
+  background-color: #E85F5F;
+  top:90px;
+  left:0px;
+  right:0px;
+  border-radius: 5px;
+}
+.swal-text {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  margin:0px;
+  color:White
+}
+.swal-text:last-child {
+  margin-bottom:15px ;
+}
+
+.swal-text:first-child {
+  margin-top:15px ;
+}
+.swal-overlay {
+  background-color: transparent;
+}
+
