--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,15 @@
   letter-spacing: 0em;
   text-align: left;
 }
+.text-search {
+  font-family: Roboto;
+font-size: 16px;
+font-weight: 500;
+line-height: 19px;
+letter-spacing: 0em;
+text-align: left;
 
+}
 .text-caption {
   font-family: Roboto;
   font-size: 14px;
@@ -101,7 +109,7 @@ textarea {
   font-family: Roboto;
   font-size: 12px;
   font-weight: 700;
-  line-height: 12px;
+  line-height: 14.06px;
   letter-spacing: 0em;
   text-align: left;
   color: white;
