--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,9 @@
   font-weight: normal;
   font-style: normal;
 }
+
 @media only screen and (max-width: 400px) {
+  
 .title-text {
   font-family: Roboto;
   font-size: 16px;
@@ -159,6 +161,10 @@ textarea {
 .margin-top-28 {
   margin-top: 28px;
 }
+.margin-left-28 {
+  margin-left: 28px;
+}
+
 
 .margin-bottom-24 {
   margin-bottom: 24px;
