--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -75,6 +75,8 @@ text-align: left;
   border-radius: 5px;
   border: 1px solid #dde2ff;
   background-color: white;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .chip {
@@ -86,7 +88,9 @@ text-align: left;
   padding-top:5px;
   text-align: center;
 }
-
+.width-full {
+  width: 100%
+}
 .flex-box {
   display: flex;
 }
@@ -98,7 +102,9 @@ text-align: left;
 .align-self-center {
   align-self: center;
 }
-
+.align-content-space-between {
+ align-content: space-between
+}
 textarea {
   width: 100%;
   border: 3px solid #d1d8ff;
