--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,17 @@
 .justify-self-center {
   justify-self: center;
 }
+
+.text-concat {
+  position: relative;
+  display: inline-block;
+  word-wrap: break-word;
+  overflow: hidden;
+  max-width:382px;
+  min-height: 56px; 
+  max-height: 56px;
+  text-align:justify;
+}
 @media only screen and (max-width: 400px) {
   
 .title-text {
@@ -83,6 +94,7 @@
 }
 
 
+
 .text-search {
   font-family: Roboto;
 font-size: 16px;
@@ -122,10 +134,13 @@ text-align: left;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  z-index: -1
+  z-index: -1;
+
 }
 
 .chip {
+  inline-size: 382px;
+  overflow-wrap: break-word;
   width: auto;
   height: auto;
   background: #7a8dfd;
@@ -152,9 +167,9 @@ text-align: left;
  align-content: space-between
 }
 textarea {
-  width: 100%;
   border: 3px solid #d1d8ff;
   border-radius: 5px;
+  height:80px;
 }
 
 .text-small {
