resolve PR issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -262,7 +262,7 @@ textarea {
   font-size: 18px;
   line-height: 21px;
   margin:0px;
-  color:White
+  color:white;
 }
 .swal-text:last-child {
   margin-bottom:15px ;
