fix: design fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -283,56 +283,21 @@ textarea {
     flex-wrap: wrap;
     flex-direction: column;
     z-index: -1;
-    max-width:382px;
+    max-width:500px;
   }
- 
-}
-@media only screen and (min-width: 992px) {
-
-  .success {
-    position:absolute;
-    height: 55px;
-    top:90px;
-    left:0px;
-    right:0px;
-    border-radius: 5px;
-    background-color: #0BC475;
-  }
-  .error {
-    position:absolute;
-    height: 55px;
-    top:90px;
-    left:0px;
-    right:0px;
-    border-radius: 5px;
-    background-color: #E85F5F;
-  }
-
-  .card {
-    padding: 16px;
-    border-radius: 5px;
-    border: 1px solid #dde2ff;
-    background-color: white;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    z-index: -1;
-    max-width:382px;
-  }
-
   .text-concat {
     position: relative;
     display: inline-block;
     word-wrap: break-word;
     overflow: hidden;
-    max-width:382px;
+    max-width:500px;
     min-height: 56px; 
     max-height: 56px;
     text-align:justify;
   }
  
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
 
   .success {
     position:absolute;
@@ -362,7 +327,7 @@ textarea {
     flex-wrap: wrap;
     flex-direction: column;
     z-index: -1;
-    max-width:382px;
+    /* max-width:382px; */
   }
 
   .text-concat {
@@ -370,14 +335,14 @@ textarea {
     display: inline-block;
     word-wrap: break-word;
     overflow: hidden;
-    max-width:382px;
+    /* max-width:382px; */
     min-height: 56px; 
     max-height: 56px;
     text-align:justify;
   }
  
 }
-@media only screen and (max-width: 766px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
 
   .success {
     position:absolute;
@@ -407,7 +372,7 @@ textarea {
     flex-wrap: wrap;
     flex-direction: column;
     z-index: -1;
-    max-width:382px;
+    /* max-width:382px; */
   }
 
   .text-concat {
@@ -415,7 +380,52 @@ textarea {
     display: inline-block;
     word-wrap: break-word;
     overflow: hidden;
-    max-width:382px;
+    /* max-width:382px; */
+    min-height: 56px; 
+    max-height: 56px;
+    text-align:justify;
+  }
+ 
+}
+@media only screen and (max-width: 767px) and (min-width: 577px) {
+
+  .success {
+    position:absolute;
+    height: 55px;
+    top:90px;
+    left:0px;
+    right:0px;
+    border-radius: 5px;
+    background-color: #0BC475;
+  }
+  .error {
+    position:absolute;
+    height: 55px;
+    top:90px;
+    left:0px;
+    right:0px;
+    border-radius: 5px;
+    background-color: #E85F5F;
+  }
+
+  .card {
+    padding: 16px;
+    border-radius: 5px;
+    border: 1px solid #dde2ff;
+    background-color: white;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    z-index: -1;
+    /* max-width:382px; */
+  }
+
+  .text-concat {
+    position: relative;
+    display: inline-block;
+    word-wrap: break-word;
+    overflow: hidden;
+    /* max-width:382px; */
     min-height: 56px; 
     max-height: 56px;
     text-align:justify;
@@ -423,7 +433,7 @@ textarea {
  
 }
 
-@media only screen and (max-width: 576px) {
+@media only screen and (max-width: 576px) and (min-width: 376px) {
 
   .success {
     position:absolute;
@@ -453,7 +463,7 @@ textarea {
     flex-wrap: wrap;
     flex-direction: column;
     z-index: -1;
-    max-width:310px;
+    /* max-width:310px; */
   }
 
   .text-concat {
@@ -461,7 +471,7 @@ textarea {
     display: inline-block;
     word-wrap: break-word;
     overflow: hidden;
-    max-width:310px;
+    /* max-width:310px; */
     min-height: 56px; 
     max-height: 56px;
     text-align:justify;
@@ -499,7 +509,7 @@ textarea {
     flex-wrap: wrap;
     flex-direction: column;
     z-index: -1;
-    max-width:300px;
+    /* max-width:300px; */
   }
 
   .text-concat {
@@ -507,7 +517,7 @@ textarea {
     display: inline-block;
     word-wrap: break-word;
     overflow: hidden;
-    max-width:300px;
+    /* max-width:300px; */
     min-height: 56px; 
     max-height: 56px;
     text-align:justify;
