--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,6 +174,14 @@ textarea {
   border: 3px solid #d1d8ff;
   border-radius: 5px;
   height:80px;
+  box-sizing: border-box; 
+  /* 
+  The default is normally content-box which uses 
+  the element's inner width only. Most browsers supply 
+  their own default border and padding styles for textarea, 
+  but not always box-sizing, so the result may be that width: 100%; 
+  means the parent's width plus the browser's default border and padding, 
+  which, if those are non-zero, is obviously more than the width of the parent container. */
 }
 
 .text-done {
@@ -252,7 +260,9 @@ textarea {
   background-color: transparent;
 }
 
-
+.padding-4 {
+  padding: 16px
+}
 
 @media only screen and (min-width: 1200px) {
 
@@ -275,7 +285,6 @@ textarea {
     background-color: #E85F5F;
   }
   .card {
-    padding: 16px;
     border-radius: 5px;
     border: 1px solid #dde2ff;
     background-color: white;
@@ -317,7 +326,6 @@ textarea {
   }
 
   .card {
-    padding: 16px;
     border-radius: 5px;
     border: 1px solid #dde2ff;
     background-color: white;
@@ -360,7 +368,6 @@ textarea {
   }
 
   .card {
-    padding: 16px;
     border-radius: 5px;
     border: 1px solid #dde2ff;
     background-color: white;
@@ -403,7 +410,6 @@ textarea {
   }
 
   .card {
-    padding: 16px;
     border-radius: 5px;
     border: 1px solid #dde2ff;
     background-color: white;
@@ -447,7 +453,7 @@ textarea {
   }
 
   .card {
-    padding: 16px;
+
     border-radius: 5px;
     border: 1px solid #dde2ff;
     background-color: white;
@@ -491,7 +497,6 @@ textarea {
   }
 
   .card {
-    padding: 16px;
     border-radius: 5px;
     border: 1px solid #dde2ff;
     background-color: white;
