--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,18 +20,12 @@
 .justify-self-center {
   justify-self: center;
 }
-
-.text-concat {
-  position: relative;
-  display: inline-block;
-  word-wrap: break-word;
-  overflow: hidden;
-  max-width:382px;
-  min-height: 56px; 
-  max-height: 56px;
-  text-align:justify;
+.text-center {
+  text-align: center;
 }
-@media only screen and (max-width: 400px) {
+
+
+@media only screen and (max-width: 500px) {
   
 .title-text {
   font-family: Roboto;
@@ -57,8 +51,34 @@
   letter-spacing: 0em;
   text-align: center;
 }
+.text-description {
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
 }
-@media only screen and (min-width: 768px) {
+.text-caption {
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 14px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #bbbdd0;
+}
+.text-small {
+  font-family: Roboto;
+  font-size: 10px;
+  font-weight: 700;
+  line-height: 14.06px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: white;
+}
+}
+@media only screen and (min-width: 578px) {
   .title-text {
     font-family: Roboto;
     font-size: 30px;
@@ -83,17 +103,33 @@
     letter-spacing: 0em;
     text-align: center;
   }
+  .text-description {
+    font-family: Roboto;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: left;
   }
-.text-description {
-  font-family: Roboto;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 28px;
-  letter-spacing: 0em;
-  text-align: left;
-}
-
-
+  .text-caption {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 14px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #bbbdd0;
+  }
+  .text-small {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 14.06px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: white;
+  }
+  }
 
 .text-search {
   font-family: Roboto;
@@ -102,39 +138,6 @@ font-weight: 500;
 line-height: 19px;
 letter-spacing: 0em;
 text-align: left;
-
-}
-.text-caption {
-  font-family: Roboto;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 14px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #bbbdd0;
-}
-
-.text-small {
-  font-family: Roboto;
-  font-size: 12px;
-  font-weight: 700;
-  line-height: 12px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: white;
-}
-
-
-
-.card {
-  padding: 16px;
-  border-radius: 5px;
-  border: 1px solid #dde2ff;
-  background-color: white;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  z-index: -1;
 
 }
 
@@ -148,6 +151,7 @@ text-align: left;
   padding: 5px 12px;
   padding-top:5px;
   text-align: center;
+  
 }
 .width-full {
   width: 100%
@@ -178,16 +182,6 @@ textarea {
   but not always box-sizing, so the result may be that width: 100%; 
   means the parent's width plus the browser's default border and padding, 
   which, if those are non-zero, is obviously more than the width of the parent container. */
-}
-
-.text-small {
-  font-family: Roboto;
-  font-size: 12px;
-  font-weight: 700;
-  line-height: 14.06px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: white;
 }
 
 .text-done {
@@ -237,19 +231,9 @@ textarea {
 .relative-position {
   position: relative;
 }
- .success {
+.swal-basic {
   position:absolute;
   height: 55px;
-  background-color: #0BC475;
-  top:90px;
-  left:0px;
-  right:0px;
-  border-radius: 5px;
-}
-.error {
-  position:absolute;
-  height: 55px;
-  background-color: #E85F5F;
   top:90px;
   left:0px;
   right:0px;
@@ -264,7 +248,9 @@ textarea {
 .swal-text:first-child {
   margin-top:15px ;
 }
-
+/* .swal-overlay {
+  background-color: transparent;
+} */
 
 .padding-4 {
   padding: 16px
