--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,8 +173,8 @@ text-align: left;
 textarea {
   border: 3px solid #d1d8ff;
   border-radius: 5px;
-  height:80px;
   box-sizing: border-box; 
+  min-height: 105px;
   /* 
   The default is normally content-box which uses 
   the element's inner width only. Most browsers supply 
