--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -130,6 +130,58 @@
   }
  
 }
+@media only screen and (min-width: 768px) and (max-width: 991px) { 
+  .title-text {
+    font-family: Roboto;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 35px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+  .text-button {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+  .info-text {
+    font-family: Roboto;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+  .text-description {
+    font-family: Roboto;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+  .text-caption {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 14px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #bbbdd0;
+  }
+  .text-small {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 14.06px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: white;
+  }
+}
 @media only screen and (max-width: 767px) and (min-width: 577px) {
 
   .title-text {
@@ -365,11 +417,12 @@ textarea {
 .margin-top-7 {
   margin-top: 28px;
 }
+.margin-top-1 {
+  margin-top: 4px;
+}
 .margin-left-7 {
   margin-left: 28px;
 }
-
-
 .margin-bottom-6 {
   margin-bottom: 24px;
 }
